# neuralese

./: .gitignore  COMPONENTS.md  README.md  TESTING.md
.github/workflows/: build-windows-installer.yml  component-tests.yml  submission-integrity.yml
apps/block-editor/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/builder/: .gitignore  README.md  build.ps1  documentation.md  export_presets.cfg  neuralese.png.import  project.godot  security_secrets_and_access.md
installer/setup/: .gitignore  README.md  build-installer.ps1  build.ps1  index.html  package-lock.json  package.json  vite.config.ts
installer/setup/src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
installer/setup/src-tauri/capabilities/: default.json
installer/setup/src-tauri/icons/: icon.icns
installer/setup/src-tauri/src/: main.rs
installer/setup/src-tauri/ui/: app.slint
research/: README.md
runtime/onnx-training/: DEMO.md  README.md  implementation-plan.md  что сделал.md
scripts/: verify-submission.sh
services/api/: .dockerignore  .gitignore  Dockerfile  README.md  a.py  aa,py.py  app_bp.py  build_runner.py  bvtopo.py  cfg.json  commits.txt  commits_FRONT.txt  commits_api.txt  commits_short.txt  imit_nav_fast.onnx  modelrun.py  opti_vis.py  optibench.py  requirements.freeze.txt  requirements.freeze.txt.bak  requirements.txt  robotstuff.py  (+4 more)
services/api/yolks/: Cargo.toml  Cross.toml  build.py  packer.py
services/api/yolks/.cargo/: config.toml
services/api/yolks/src/: main.rs  meta.rs
(+570 files in other folders)
